--- a/scraper.ipynb
+++ b/scraper.ipynb
@@ -40,7 +40,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "product = '106821564'\n",
+    "product = '160867579'\n",
     "url = f'https://www.ceneo.pl/{product}/opinie-2'\n",
     "response = requests.get(url)\n",
     "response.status_code"
@@ -53,7 +53,43 @@
    "outputs": [],
    "source": [
     "page_dom = BeautifulSoup(response.text, 'html.parser')\n",
-    "page_dom"
+    "print(type(page_dom))\n",
+    "opinions = page_dom.select(\"div.js_product-review\")\n",
+    "print(type(opinions))\n",
+    "opinion = page_dom.select_one(\"div.js_product-review\")\n",
+    "print(type(opinion))\n",
+    "print(opinion)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##  Ekstrakcja składowych pojedynczej opinii\n",
+    "\n",
+    "|Składowa|Selektor|Zmienna|\n",
+    "|--------|--------|-------|\n",
+    "|id opinii|[\"data-entry-id\"]|opinion_id|\n",
+    "|autor|span.user-post__author-name|author|\n",
+    "|rekomedacje|span.user-post__author-recomendation > em|recommendation|\n",
+    "|gwiazdki|span.user-post__score-count|rating|\n",
+    "|treść|div.user-post__text|content|\n",
+    "|lista zalet|div.review-feature__title--positives ~ div.review-feature__item|pros|\n",
+    "|lista wad|div.review-feature__title--negatives ~ div.review-feature__item|cons|\n",
+    "|dla ilu przudatna|button.vote-yes > span|useful|\n",
+    "|dla ilu nie przudatna|button.vote-no > span|useless|\n",
+    "|data wstawienia|span.user-post__published > time:nth-child(1)['datetime']|publish_date|\n",
+    "|data zakupu|span.user-post__published > time:nth-child(2)['datetime']|purchase_date|"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "opinion_id = opinion[\"data-entry-id\"]"
    ]
   }
  ],
