--- a/scraper.ipynb
+++ b/scraper.ipynb
@@ -89,7 +89,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "opinion_id = opinion[\"data-entry-id\"]"
+    "opinion_id = opinion[\"data-entry-id\"]\n",
+    "author = opinion.select_one(\"span.user-post__author-name\")\n",
+    "recommendation = opinion.select_one(\"span.user-post__author-recomendation > em\")\n",
+    "rating = opinion.select_one(\".span.user-post__score-count\")\n",
+    "content = opinion.select_one(\"div.user-post__text\")\n",
+    "pros = opinion.select(\"div.review-feature__title--positives ~ div.review-feature_item\")\n",
+    "cons = opinion.select(\"div.review-feature__title--negatives ~ div.review-feature_item\")\n",
+    "useful = opinion.select_one(\"button.vote-yes > span\")\n",
+    "useless = opinion.select_one(\"button.vote-no > span\")\n",
+    "publish_date = opinion.select_one(\"span.user-post__published > time:nth-child(1)\")\n",
+    "purchase_date = opinion.select_one(\"span.user-post__published > time:nth-child(2)\")"
    ]
   }
  ],
@@ -109,7 +119,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.8"
   },
   "orig_nbformat": 4
  },
