--- a/scraper.ipynb
+++ b/scraper.ipynb
@@ -22,6 +22,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "import json\n",
     "import requests\n",
     "from bs4 import BeautifulSoup"
    ]
@@ -40,8 +42,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "product = '160867579'\n",
-    "url = f'https://www.ceneo.pl/{product}/opinie-2'\n",
+    "product_id = '160867579'\n",
+    "url = f'https://www.ceneo.pl/{product}/opinie-1'\n",
     "response = requests.get(url)\n",
     "response.status_code"
    ]
@@ -52,13 +54,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "page_dom = BeautifulSoup(response.text, 'html.parser')\n",
-    "print(type(page_dom))\n",
-    "opinions = page_dom.select(\"div.js_product-review\")\n",
-    "print(type(opinions))\n",
-    "opinion = page_dom.select_one(\"div.js_product-review\")\n",
-    "print(type(opinion))\n",
-    "print(opinion)"
+    "all_opinions = []\n",
+    "while ():\n",
+    "    response = requests.get(url)\n",
+    "    page_dom = BeautifulSoup(response.text, 'html.parser')\n",
+    "    opinions = page_dom.select(\"div.js_product-review\")\n",
+    "    for opinion in opinions:\n",
+    "        try:\n",
+    "            single_opinion = {\n",
+    "                \"opinion_id \" : opinion[\"data-entry-id\"],\n",
+    "                \"author\" : opinion.select_one(\"span.user-post__author-name\").text.strip(),\n",
+    "                \"recommendation\" : opinion.select_one(\"span.user-post__author-recomendation > em\").text.strip(),\n",
+    "                \"rating\" : opinion.select_one(\"span.user-post__score-count\").text.strip(),\n",
+    "                \"content\": opinion.select_one(\"div.user-post__text\").text.strip(),\n",
+    "                \"pros\" : [p.text.strip() for p in opinion.select(\"div.review-feature__title--positives ~ div.review-feature_item\")],\n",
+    "                \"cons\" : [c.text.strip() for c in opinion.select(\"div.review-feature__title--negatives ~ div.review-feature_item\")],\n",
+    "                \"useful\" : opinion.select_one(\"button.vote-yes > span\").text.strip(),\n",
+    "                \"useless\" : opinion.select_one(\"button.vote-no > span\").text.strip(),\n",
+    "                \"publish_date\" : opinion.select_one(\"span.user-post__published > time:nth-child(1)\")['datetime'].strip(),\n",
+    "                \"purchase_date\" : opinion.select_one(\"span.user-post__published > time:nth-child(2)\")['datetime'].strip()\n",
+    "            }\n",
+    "            all_opinions.append(single_opinion)\n",
+    "        except (TypeError,AttributeError):\n",
+    "            pass\n",
+    "try:\n",
+    "    url = \"https://www.ceneo.pl\"+page_dom.select_one(\"a.pagination__next\")[\"href\"].strip()\n",
+    "except TypeError:\n",
+    "    url = None"
    ]
   },
   {
@@ -66,7 +88,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##  Ekstrakcja składowych pojedynczej opinii\n",
+    "##  Strukura opinii w serwisie Ceneo.pl\n",
     "\n",
     "|Składowa|Selektor|Zmienna|\n",
     "|--------|--------|-------|\n",
@@ -89,7 +111,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "opinion_id = opinion[\"data-entry-id\"]"
+    "if not os.path.exists(\"opinions\"):\n",
+    "    os.mkdir(\"opinions\")\n",
+    "with open(f\"opinions/{product_id}.json\", \"w\", encoding=\"UTF-8\") as jf:\n",
+    "    json.dump(all_opinions, jf, indent = 4, ensure_ascii=False)\n",
+    "\n"
    ]
   }
  ],
