--- a/scraper.ipynb
+++ b/scraper.ipynb
@@ -9,82 +9,6 @@
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## BIBLIOTEKI"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "import json\n",
-    "import requests\n",
-    "from bs4 import BeautifulSoup"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Wysłanie do serwera żądania dostępu do zasobu"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "product_id = '160867579'\n",
-    "url = f'https://www.ceneo.pl/{product}/opinie-1'\n",
-    "response = requests.get(url)\n",
-    "response.status_code"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "all_opinions = []\n",
-    "while ():\n",
-    "    response = requests.get(url)\n",
-    "    page_dom = BeautifulSoup(response.text, 'html.parser')\n",
-    "    opinions = page_dom.select(\"div.js_product-review\")\n",
-    "    for opinion in opinions:\n",
-    "        try:\n",
-    "            single_opinion = {\n",
-    "                \"opinion_id \" : opinion[\"data-entry-id\"],\n",
-    "                \"author\" : opinion.select_one(\"span.user-post__author-name\").text.strip(),\n",
-    "                \"recommendation\" : opinion.select_one(\"span.user-post__author-recomendation > em\").text.strip(),\n",
-    "                \"rating\" : opinion.select_one(\"span.user-post__score-count\").text.strip(),\n",
-    "                \"content\": opinion.select_one(\"div.user-post__text\").text.strip(),\n",
-    "                \"pros\" : [p.text.strip() for p in opinion.select(\"div.review-feature__title--positives ~ div.review-feature_item\")],\n",
-    "                \"cons\" : [c.text.strip() for c in opinion.select(\"div.review-feature__title--negatives ~ div.review-feature_item\")],\n",
-    "                \"useful\" : opinion.select_one(\"button.vote-yes > span\").text.strip(),\n",
-    "                \"useless\" : opinion.select_one(\"button.vote-no > span\").text.strip(),\n",
-    "                \"publish_date\" : opinion.select_one(\"span.user-post__published > time:nth-child(1)\")['datetime'].strip(),\n",
-    "                \"purchase_date\" : opinion.select_one(\"span.user-post__published > time:nth-child(2)\")['datetime'].strip()\n",
-    "            }\n",
-    "            all_opinions.append(single_opinion)\n",
-    "        except (TypeError,AttributeError):\n",
-    "            pass\n",
-    "try:\n",
-    "    url = \"https://www.ceneo.pl\"+page_dom.select_one(\"a.pagination__next\")[\"href\"].strip()\n",
-    "except TypeError:\n",
-    "    url = None"
-   ]
-  },
-  {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -106,6 +30,121 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## BIBLIOTEKI"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import json\n",
+    "import requests\n",
+    "from bs4 import BeautifulSoup"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Funkcja do"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def extract(ancestor, selector=None, attribute=None, return_list=False):\n",
+    "    if selector:\n",
+    "        if return_list:\n",
+    "            if attribute:\n",
+    "                return [tag[attribute].strip() for tag in ancestor.select(selector)]\n",
+    "            return [tag.text.strip() for tag in ancestor.select(selector)]\n",
+    "        if attribute:\n",
+    "            try:\n",
+    "                return ancestor.select_one(selector)[attribute].strip()\n",
+    "            except TypeError:\n",
+    "                return None\n",
+    "        try:\n",
+    "            return ancestor.select_one(selector).text.strip()\n",
+    "        except AttributeError:\n",
+    "            return None\n",
+    "    if attribute:\n",
+    "        return ancestor[attribute].strip()\n",
+    "    return ancestor.text.strip()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "selectors = {\n",
+    "    \"opinion_id\": (None, \"data-entry-id\"),\n",
+    "    \"author\": (\"span.user-post__author-name\",),\n",
+    "    \"recommendation\": (\"span.user-post__author-recomendation > em\",),\n",
+    "    \"rating\": (\"span.user-post__score-count\",),\n",
+    "    \"content\": (\"div.user-post__text\",),\n",
+    "    \"pros\": (\"div.review-feature__title--positives ~ div.review-feature__item\", None, True),\n",
+    "    \"cons\": (\"div.review-feature__title--negatives ~ div.review-feature__item\", None, True),\n",
+    "    \"useful\": (\"button.vote-yes > span\",),\n",
+    "    \"useless\": (\"button.vote-no > span\",),\n",
+    "    \"publish_date\": (\"span.user-post__published > time:nth-child(1)\",'datetime'),\n",
+    "    \"purchase_date\": (\"span.user-post__published > time:nth-child(2)\",'datetime'),\n",
+    "}"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Wysłanie do serwera żądania dostępu do zasobu"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "product_id = '160867579'\n",
+    "url = f\"https://www.ceneo.pl/{product_id}/opinie-1\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_opinions = []\n",
+    "while (url):\n",
+    "    response = requests.get(url)\n",
+    "    page_dom = BeautifulSoup(response.text, \"html.parser\")\n",
+    "    opinions = page_dom.select(\"div.js_product-review\")\n",
+    "    for opinion in opinions:\n",
+    "        single_opinion = {\n",
+    "            key: extract(opinion, *value)\n",
+    "                for key, value in selectors.items()\n",
+    "        }\n",
+    "        all_opinions.append(single_opinion)\n",
+    "    try:\n",
+    "        url = \"https://www.ceneo.pl\"+extract(page_dom, \"a.pagination__next\",\"href\")\n",
+    "    except TypeError:\n",
+    "        url = None"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -114,7 +153,7 @@
     "if not os.path.exists(\"opinions\"):\n",
     "    os.mkdir(\"opinions\")\n",
     "with open(f\"opinions/{product_id}.json\", \"w\", encoding=\"UTF-8\") as jf:\n",
-    "    json.dump(all_opinions, jf, indent = 4, ensure_ascii=False)"
+    "    json.dump(all_opinions, jf, indent=4, ensure_ascii=False)"
    ]
   }
  ],
@@ -134,7 +173,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.9"
   },
   "orig_nbformat": 4
  },
