--- a/scraper.ipynb
+++ b/scraper.ipynb
@@ -5,27 +5,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# CENEO SCRAPER"
+    "# Ceneo Scraper"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##  Strukura opinii w serwisie Ceneo.pl\n",
+    "## Struktura opinii w serwisie Ceneo.pl\n",
     "\n",
     "|Składowa|Selektor|Zmienna|\n",
     "|--------|--------|-------|\n",
     "|id opinii|[\"data-entry-id\"]|opinion_id|\n",
     "|autor|span.user-post__author-name|author|\n",
-    "|rekomedacje|span.user-post__author-recomendation > em|recommendation|\n",
+    "|rekomendacja|span.user-post__author-recomendation > em|recommendation|\n",
     "|gwiazdki|span.user-post__score-count|rating|\n",
     "|treść|div.user-post__text|content|\n",
     "|lista zalet|div.review-feature__title--positives ~ div.review-feature__item|pros|\n",
     "|lista wad|div.review-feature__title--negatives ~ div.review-feature__item|cons|\n",
-    "|dla ilu przudatna|button.vote-yes > span|useful|\n",
-    "|dla ilu nie przudatna|button.vote-no > span|useless|\n",
-    "|data wstawienia|span.user-post__published > time:nth-child(1)['datetime']|publish_date|\n",
+    "|dla ilu przydatna|button.vote-yes > span|useful|\n",
+    "|dla ilu nieprzydatna|button.vote-no > span|useless|\n",
+    "|data wystawienia|span.user-post__published > time:nth-child(1)['datetime']|publish_date|\n",
     "|data zakupu|span.user-post__published > time:nth-child(2)['datetime']|purchase_date|"
    ]
   },
@@ -34,12 +35,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## BIBLIOTEKI"
+    "## Biblioteki"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,15 +51,16 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Funkcja do"
+    "## Funkcja do ekstrakcji danych z kodu HTML"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,8 +85,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Słownik z strukturą opinii z serwisu Ceneo.pl"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,22 +117,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Wysłanie do serwera żądania dostępu do zasobu"
+    "## Link do pierwszej strony z opiniami o wskazanym produkcie w serwisie Ceneo.pl"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "product_id = '160867579'\n",
+    "product_id = input(\"Podaj kod produktu w serwisie Ceneo.pl: \")\n",
     "url = f\"https://www.ceneo.pl/{product_id}/opinie-1\""
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Ekstrakcja wszystkich opinii o wskazanym produkcie z serwisu Ceneo.pl"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,8 +161,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Zapis pobranych opinii o wskazanym produkcie do pliku JSON"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +182,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -173,7 +196,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.4"
   },
   "orig_nbformat": 4
  },
